# dcr-core

./: .gitignore  .pylintrc  404.html  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  index.html  logging_cfg.yaml  mkdocs.yml  objects.inv  pyproject.toml  run_dcr_core_dev.bat  run_dcr_core_dev.sh  setup.cfg  setup.cfg.reference  sitemap.xml
PDFlib/: TET.py
api-docs/: index.html
application_api_documentation/: index.html
application_configuration/: index.html
application_document_language/: index.html
application_installation/: index.html
application_operations/: index.html
application_requirements/: index.html
code_of_conduct/: index.html
contributing/: index.html
css/: mkdocstrings.css
data/: README.md  lt_export_rule_heading.json  lt_export_rule_list_bullet.json  lt_export_rule_list_number.json
dcr_core/: __init__.py  __init__.pyi  cls_line_type_header_footer.py  cls_line_type_header_footer.pyi  cls_line_type_headers_footers.py  cls_line_type_headers_footers.pyi  cls_line_type_heading.py  cls_line_type_heading.pyi  cls_line_type_list_bullet.py  cls_line_type_list_bullet.pyi  cls_line_type_list_number.py  cls_line_type_list_number.pyi  cls_line_type_table.py  cls_line_type_table.pyi  cls_line_type_toc.py  cls_line_type_toc.pyi  cls_nlp_core.py  cls_nlp_core.pyi  cls_process.py  cls_process.pyi  cls_setup.py  cls_setup.pyi  cls_text_parser.py  cls_text_parser.pyi  cls_tokenizer_spacy.py  cls_tokenizer_spacy.pyi  core_glob.py  core_glob.pyi  core_utils.py  core_utils.pyi  processing.py  processing.pyi
development_code_formatting/: index.html
development_coding_standards/: index.html
development_continuous_delivery/: index.html
development_environment/: index.html
development_line_type/: index.html
development_research_notes/: index.html
development_software_documentation/: index.html
development_software_testing/: index.html
development_static_code_analysis/: index.html
development_version_planning/: index.html
docs/: README.md  application_api_documentation.md  application_configuration.md  application_document_language.md  application_installation.md  application_operations.md  application_requirements.md  code_of_conduct.md  contributing.md  developing_api_documentation.md  developing_code_formatting.md  developing_coding_standards.md  developing_continuous_delivery.md  developing_development_environment.md  developing_line_type.md  developing_software_documentation.md  developing_software_testing.md  developing_static_code_analysis.md  developing_system_environment.md  developing_version_planning.md  development_api_documentation.md  development_code_formatting.md  development_coding_standards.md  development_continuous_delivery.md  development_development_environment.md  development_environment.md  development_line_type.md  development_research_notes.md  development_software_documentation.md  development_software_testing.md  development_static_code_analysis.md  development_system_environment.md  development_version_planning.md  (+4 more)
(+735 files in other folders)
