[coverage:run]
omit = TET.py

[dcr_core]

[dcr_core.env.dev]
delete_auxiliary_files = false
directory_inbox = data/inbox_dev
json_incl_config = true
json_incl_fonts = true
json_incl_heading = true
json_incl_list_bullet = true
json_incl_list_number = true
json_incl_params = true
lt_footer_max_lines = 3
lt_header_max_lines = 3
lt_heading_file_incl_no_ctx = 3
lt_heading_file_incl_regexp = true
lt_heading_tolerance_llx = 5
lt_list_bullet_tolerance_llx = 5
lt_list_number_file_incl_regexp = true
lt_list_number_tolerance_llx = 5
verbose_lt_header_footer = true
verbose_lt_toc = false

[dcr_core.env.test]

[dcr_core.spacy]

[flake8]
count = True
doctests = True
extend-ignore = E203
format = pylint
indent-size = 4
max-complexity = 10
max-doc-length = 140
max-line-length = 140
show-pep8 = True
show-source = True
statistics = True

[options.package_data]
* = py.typed

[radon]
average = True
order = ALPHA
show-complexity = True
total_average = True

