[coverage:run]
omit = TET.py

[dcr_core]

[dcr_core.env.dev]
;delete_auxiliary_files = false
;directory_inbox = data/inbox_dev
;json_incl_config = true
;json_incl_fonts = true
;json_incl_heading = true
;json_incl_list_bullet = true
;json_incl_list_number = true
;json_incl_params = true
;json_indent = 4
json_sort_keys = false
;lt_export_rule_file_heading = data/lt_export_rule_heading.json
;lt_export_rule_file_list_bullet = data/lt_export_rule_list_bullet.json
;lt_export_rule_file_list_number = data/lt_export_rule_list_number.json
;lt_footer_max_distance = 3
;lt_footer_max_lines = 3
;lt_header_max_distance = 3
;lt_header_max_lines = 3
;lt_heading_file_incl_no_ctx = 3
;lt_heading_file_incl_regexp = true
;lt_heading_max_level = 3
;lt_heading_min_pages = 2
;lt_heading_required = true
;lt_heading_rule_file = data/lt_export_rule_heading.json
;lt_heading_tolerance_llx = 5
;lt_list_bullet_min_entries = 2
;lt_list_bullet_required = true
;lt_list_bullet_rule_file = data/lt_export_rule_list_bullet.json
;lt_list_bullet_tolerance_llx = 5
;lt_list_number_file_incl_regexp = true
;lt_list_number_min_entries = 2
;lt_list_number_required = true
;lt_list_number_rule_file = data/lt_export_rule_list_number.json
;lt_list_number_tolerance_llx = 5
;lt_toc_last_page = 5
;lt_toc_min_entries = 5
;lt_toc_required = true
;pdf2image_type = jpeg
;tesseract_timeout = 30
;tokenize_2_database = true
;tokenize_2_jsonfile = true
;verbose = true
;verbose_lt_header_footer = true
;verbose_lt_heading = true
;verbose_lt_list_bullet = true
;verbose_lt_list_number = true
;verbose_lt_toc = true
;verbose_parser = none

[dcr_core.env.test]

[dcr_core.spacy]

[flake8]
count = True
doctests = True
extend-ignore = E203
format = pylint
indent-size = 4
max-complexity = 10
max-doc-length = 140
max-line-length = 140
show-pep8 = True
show-source = True
statistics = True

[options.package_data]
* = py.typed

[radon]
average = True
order = ALPHA
show-complexity = True
total_average = True

